[project]
name = "valency-anndata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Patrick Connolly", email = "patrick.c.connolly@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "anndata>=0.11.4",
    "googletrans>=4.0.2",
    "nest-asyncio>=1.6.0",
    "polis-client",
    "scanpy",
    # Required to support macos-x86_64 (Intel, pre Apple M1 silicon)
    # See: https://github.com/numba/llvmlite/issues/1357#issuecomment-3516587016
    "llvmlite<=0.45.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
polis-client = { git = "https://github.com/patcon/polis-client" }
