[project]
name = "valency-anndata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Patrick Connolly", email = "patrick.c.connolly@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "anndata>=0.11.4",
    "googletrans>=4.0.2",
    "nest-asyncio>=1.6.0",
    "polis-client",
    "scanpy[leiden]",
    # Intel macOS only (no usable wheels for pre Apple M1)
    # See: https://github.com/numba/llvmlite/issues/1357#issuecomment-3516587016
    "llvmlite<=0.45.1; platform_system == 'Darwin' and platform_machine == 'x86_64'",
    # Langevitour expects setuptools to work.
    "langevitour>=0.8.0",
    "setuptools<81",
    "red-dwarf",
    "svgwrite>=1.4.3",
    "pacmap>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
polis-client = { git = "https://github.com/patcon/polis-client" }
red-dwarf = { git = "https://github.com/polis-community/red-dwarf", rev = "algo-registries" }

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
